Don't use LayerShellQt::useLayerShell()

This sets the QT_WAYLAND_SHELL_INTEGRATION environment variable to layer-shell.

This propagates to all apps launched from Spectacle, for example when opening a
recorded video. If the app uses Qt it will be severely broken.

BUG: 506619
(cherry picked from commit 4044ed8af9fa196cdda7aea1ef6f03e83dafe3fb)